--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@types/atom": "^1.22.4",
+    "atom-haskell-tslint-rules": "^0.1.1",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.2"
+  }
 }
